--- a/result.tex
+++ b/result.tex
@@ -56,7 +56,7 @@ Here $d_{1,2}$ are the thicknesses and $n_{1,2}$ are the refractive indices of t
 
 The width of the band gap grows with the amplitude of the wave scattered from the unit cell. This amplitude, however, also depends on frequency and, in the case of a lossless dielectric slab, it vanishes whenever an integer number of the half-waves fits into either of the dielectric layers. For comparison with Eq. (\ref{eq_braggcond}), this condition is
 \begin{equation} \phi_{1} = d_1 n_1 \frac{\omega}{c} = \pi m \text{\quad or \quad} \phi_{2} = d_2 n_2 \frac{\omega}{c} = \pi m, \text{ where } m\in \mathbb{Z}. \label{eq_fpcond}\end{equation}
-Note that unlike the Bragg resonance, this effect can be observed even in a single isolated unit cell; in fact it is the well known \textit{Fabry-Pérot resonance}\index{resonance!Fabry-P@\'erot}. 
+	Note that unlike the Bragg resonance, this effect can be observed even in a single isolated unit cell; in fact it is the well known \textit{Fabry-Pérot resonance}\index{resonance!Fabry-Perot@Fabry-P\'erot}. 
 
 The vicinity of a Fabry-Pérot resonance influences the position and width the neighbouring band gap, which can be found for different values of dielectric permittivity of the slab $\epsrl\in\{4,12,20\}$ in Fig. \ref{fg_Slab_fillfraction015_epsilon_comparison}.
 
@@ -134,9 +134,9 @@ The effective plasma frequency $f_p$ does, however, depend on the geometry descr
 \paragraph{Behaviour close to the effective plasma frequency}%{{{
 The dependence of $f_p$ on the wire radius $\rho_w \in \{1, 2, 4, 8, 16\}$ $\upmu$m is illustrated by the spectra of reflectance, transmittance, refractive index and effective permittivity in Fig. \ref{fg_Slab_fillfraction015_wireradius_scan}. The effective plasma frequency $f_p$ can be easily determined as the point where $\eeff'(f)$ crosses zero  in the plot \ref{fg_Slab_fillfraction015_wireradius_scan}d. This coincides with the lower edge of the first photonic band in Fig. \ref{fg_Slab_fillfraction015_wireradius_scan}c. 
 
-At frequencies close to $f_p$, but slightly higher, the \textit{phase velocity}\index{velocity!phase v.} in nonmagnetic media 
+At frequencies close to $f_p$, but slightly higher, the \textit{phase velocity} in nonmagnetic media 
 \begin{equation} v_p = \frac{c}{n} = \frac{c}{\sqrt{\eeff(f)}}\label{eq_vpwire}\end{equation}	
-	is proportional to $(f-f_p)^{-1/2}$ and thus very high. Conversely, the \textit{group velocity}\index{velocity!group v.} \cite{mikki2009electromagnetic}
+	is proportional to $(f-f_p)^{-1/2}$ and thus very high. Conversely, the \textit{group velocity} \cite{mikki2009electromagnetic}
 \begin{equation} v_g = \frac{c}{n+f \frac{\partial n}{\partial f}} \label{eq_vgwire}\end{equation} % \approx 2\pi \mathrm{d}f/\mathrm{d}k = \mathrm{d}f/\mathrm{d}n
 vanishes, being proportional to $(f-f_p)^{+1/2}$. Hence the product of the phase and group velocities close to $f_p$ remains nearly constant $c^2$, which is a phenomenon commonly encountered also near the \textit{cut-off frequency} of metallic waveguides.
 
@@ -292,7 +292,7 @@ The presented simulations were not optimized for the dissipative losses in silic
 \paragraph{Resonances with magnetic dipole moment}%{{{
 The fundamental resonance in a cut wire has an electric dipole moment only. The resonant magnetic field circulates around the wire and due to its rotational symmetry along the $x$-axis, the magnetic dipole moment is zero. Other structures can support resonances without symmetry with regard to the $x$-axis, thus having a magnetic dipole moment.
 
-One of the simplest examples is formed by bending a wire into a "C"-shaped \textit{split-ring resonator}\index{metamaterial!split-ring resonator} (SRR). To reduce the resonant frequency, capacitor pads can be added to the cut, as shown in Fig. \ref{fg_SRR_types}a. The first resonance in its spectrum has a dominant magnetic dipole moment, and will be denoted simply as the \textit{magnetic resonance}\index{resonance!individual magnetic}. The electric current flows through the wire along a circular path, while the magnetic field has a toroidal shape around the wire.   
+One of the simplest examples is formed by bending a wire into a "C"-shaped \textit{split-ring resonator}\index{split-ring resonator!spectra} (SRR). To reduce the resonant frequency, capacitor pads can be added to the cut, as shown in Fig. \ref{fg_SRR_types}a. The first resonance in its spectrum has a dominant magnetic dipole moment, and will be denoted simply as the \textit{magnetic resonance}\index{resonance!individual magnetic}. The electric current flows through the wire along a circular path, while the magnetic field has a toroidal shape around the wire.   
 
 The very concept of SRR is at least as old as the Hertz's experiments with the spark-gap transmitter from 1880s.
 As described in the historical review of Ref. \cite[pp. 120--126]{solymar2009waves}, first SRR arrays were built in early 1980s with the aim to build an effective medium with highly lossy complex permeability; a decade later asymmetric SRRs were used to achieve strong bianisotropy. Many publications cite Refs. \cite{pendry1999magnetism,pendry2000negative} from Pendry et al. as the first application of SRR array for achieving negative effective permeability and index of refraction, respectively. Since then, the number of SRR-related publications has grown rapidly. 
@@ -311,7 +311,7 @@ The orientation of the splitting in the SRR determines the possible coupling bet
 
 Simultaneously, it breaks the homogenisation, since the scattering parameters retrieval method assumes that the structure is symmetric along the axis of wave propagation, i.e., that its reflectance is equal from both sides. Asymmetric structures therefore have properties that can not be matched by any (reciprocal) homogeneous medium. 
 
-The symmetry is restored again by considering a \textit{symmetric split ring resonator}\index{metamaterial!symmetric split ring resonator} (sSRR), depicted in Fig. \ref{fg_SRR_types}b, which has two splittings at opposing position on the ring. 
+The symmetry is restored again by considering a \textit{symmetric split ring resonator}\index{split-ring resonator!symmetric} (sSRR), depicted in Fig. \ref{fg_SRR_types}b, which has two splittings at opposing position on the ring. 
 % A. Andryieuski, C. Menzel, C. Rockstuhl, R. Malureanu, and A.V. Lavrinenko, The split cube in a cage: %bulk negative-index material for infrared applications, Journal of Optics A: Pure and Applied Optics,
 %vol. 11, p. 114010, 2009.
 This is documented by the results in Fig. \ref{fg_SRR_principles}. The SRR with a single splitting is represented by red lines; while its magnitude of reflectance and transmittance in the plots \ref{fg_SRR_principles}a,b appear similar to these of a cut wire, the computation of the refractive index yields a spectrum (in panel \ref{fg_SRR_principles}c) which has no reasonable interpretation near the resonance at 500 GHz and above it. 
@@ -566,7 +566,7 @@ An artificial dielectric consisting of dielectric particles with effective perme
 \label{negn_diel}
 
 
-Infinite number of the higher-order resonances exist \cite[pp. 407-408]{mie1908beitrage}, resembling the set of single-electron orbitals around an atomic nucleus. Many of these, e.g. most \textit{d}\index{d}-type orbitals, have zero electric or magnetic dipole moments. Dipole moments of many others exist, but are not oriented parallel to the fields of the incident wave, and do not couple to the electromagnetic wave. In the spectrum of an array of dielectric spheres, one can clearly identify the remaining resonances as the most prominent magnetic one, electric one, the second magnetic, second electric etc. The first three resonances from this alternating series are shown in Fig. \ref{fg_Spheres_lossscan}, each manifesting as a peak in reflectance, and as a pair of resonance in $\meff(f)$ and antiresonance in $\meff(f)$, or vice versa.
+Infinite number of the higher-order resonances exist \cite[pp. 407-408]{mie1908beitrage}, resembling the set of single-electron orbitals around an atomic nucleus. Many of these, e.g. most \textit{d}-type orbitals, have zero electric or magnetic dipole moments. Dipole moments of many others exist, but are not oriented parallel to the fields of the incident wave, and do not couple to the electromagnetic wave. In the spectrum of an array of dielectric spheres, one can clearly identify the remaining resonances as the most prominent magnetic one, electric one, the second magnetic, second electric etc. The first three resonances from this alternating series are shown in Fig. \ref{fg_Spheres_lossscan}, each manifesting as a peak in reflectance, and as a pair of resonance in $\meff(f)$ and antiresonance in $\meff(f)$, or vice versa.
 
 %% todo cite vendik, Zhao etc. from the directory
 
@@ -1004,7 +1004,7 @@ A was studied recently in Ref. \cite{rybin2014photonic}; again the Mie resonance
 
 %\cite{rybin2015phase}
 
-Ref. \cite{peng2007} presents a wedge-refraction experiment with a similar metamaterial, made of square bars parallel to the electric field. The bars have a very high permittivity of $\epsrl=600$, but still the geometry of the bars is equivalent to the \textit{dense array}\index{dense array} of cylindrical rods $a/\rho \sim 4.5$. Thus it should exhibit no individual resonances and no negative index of refraction. However, as the major result of the paper \cite[Fig. 3bc]{peng2007} it is demonstrated that negative refraction occurs at the wedge, and moreover it is more or less maintained upon randomization of the rod positions.
+Ref. \cite{peng2007} presents a wedge-refraction experiment with a similar metamaterial, made of square bars parallel to the electric field. The bars have a very high permittivity of $\epsrl=600$, but still the geometry of the bars is equivalent to the \textit{dense array} of cylindrical rods $a/\rho \sim 4.5$. Thus it should exhibit no individual resonances and no negative index of refraction. However, as the major result of the paper \cite[Fig. 3bc]{peng2007} it is demonstrated that negative refraction occurs at the wedge, and moreover it is more or less maintained upon randomization of the rod positions.
 The clash can be explained by a relatively big angle of the wedge around 20$^\circ$, which actually prevents the use of effective index of refraction. % write why the randomization does not cancel the negative refraction
 
 The relevant papers (Refs. \cite{shi2007, peng2007, vynck2009all, rybin2014photonic, dominec2014transition}) come from the last ten years, although they are based on experimental and numerical methods that could be used already several decades ago. This confirms the author's view that the publications are incited by relatively recent merging of the \textit{metamaterial}\index{metamaterial} and \textit{photonic crystal}\index{photonic crystal} paradigms (see Fig. \ref{fg_mm_phc_diagram}).
@@ -1012,7 +1012,7 @@ The relevant papers (Refs. \cite{shi2007, peng2007, vynck2009all, rybin2014photo
 %}}}
 \paragraph{Implications for all-dielectric negative-index metamaterials} %{{{
 In Refs.  \cite{rybin2014photonic} and \cite{dominec2014transition}, the structure behaviour is described as metamaterial-like, when the lowest band gap contains one or both Mie resonances. Otherwise, when the first band gap is of Bragg type, the structure is classified among photonic crystals. 
-This is a rather formal notation, based on the \textit{phase criterion}\index{phase criterion} introduced on page \pageref{phasecriterion}. 
+This is a rather formal notation, based on the \textit{phase criterion} introduced on page \pageref{phasecriterion}. 
 The disappearance of resonances in the spectra is however an objective reality; the resonant skips in $\Neff'$ are required to fulfill the Kramers-Kronig relations. 
 The terminology difference has been discussed in the theoretical section, with the conclusion that one structure can be a representative of metamaterials and photonic crystals simulaneously, depending on the paradigm one prefers to use for its description. 
 
@@ -1067,7 +1067,7 @@ A closely related phenomenon  caused by surface plasmons, the \textit{Wood's ano
 \paragraph{Standing surface plasmon resonance} %{{{
 Since the structure and incident fields are both symmetric, equal amplitudes of plasmons propagating in the $+x$ and $-x$ directions are excited. They form a standing plasmonic wave, with points of zero oscillating current (nodes) centered at the slit centers. The extraordinary transmission relies on coupling of the incoming plane wave to SPP, transfer of energy of SPP to their mirror counterpart on the rear side of the structure, and re-radiation of the plane wave. 
 
-In a numerical study of SPP-assisted transmission through a single slit, Lalanne \textit{et al.}\index{et al.} have determined \cite{lalanne2005theory} the optimum slit width for wave-plasmon coupling as $d_x \approx 0.23 \lambda$, which noticeably matches the point of lowest frequency for the zero-reflection curve in Fig. \ref{fg_yslit_xscan}a. Stronger coupling apparently down-tunes the frequency, but it is not crucial for the peak transmission efficiency; since it is a resonant process, it can transmit high amplitude even through arbitrarily narrow slits. 
+In a numerical study of SPP-assisted transmission through a single slit, Lalanne \textit{et al.} have determined \cite{lalanne2005theory} the optimum slit width for wave-plasmon coupling as $d_x \approx 0.23 \lambda$, which noticeably matches the point of lowest frequency for the zero-reflection curve in Fig. \ref{fg_yslit_xscan}a. Stronger coupling apparently down-tunes the frequency, but it is not crucial for the peak transmission efficiency; since it is a resonant process, it can transmit high amplitude even through arbitrarily narrow slits. 
 
 %Lalanne-Theory_of_fishnet_optical_NIM.pdf
 % SPP on surface impact the transmission through a nano-aperture; 
@@ -1203,7 +1203,7 @@ The s-parameter method computes the same metallic structure, and only the phase 
 A natural modification of the structure discussed  above is to add conductive connections between the metallic stripes to form a perforated metallic sheet which is also denoted as a \textit{mesh}\index{mesh}, \textit{sub-wavelength hole array}\index{sub-wavelength hole array}, or within the context of metamaterials, as a \textit{fishnet}\index{fishnet}. Already in 1950s the perforated sheets were proposed to form an artificial dielectric \cite[p. 58]{brown1953artificial} with index of refraction lower than 1, but the electromagnetic wave was supposed to propagate parallel to the slabs and the operation was different.  % thus not exhibiting the resonant phenomena http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
 The spectral selectivity of a metallic mesh perpendicular to the wave vector was employed in 1960s as a microwave and far-infrared filter \cite{ulrich1967effective,ulrich1967far, vogel1964transmission}.  
 
-The research into sub-wavelength hole arrays was revived with the advent of plasmonics, since periodic patterning of the metallic surface near a sub-wavelength hole was shown to enable the \textit{extraordinary optical transmission}\index{extraordinary optical transmission} (EOT) which can be orders of magnitude higher than that estimated from the hole dimensions \cite{ebbesen1998extraordinary}. The mechanism of EOT is similar to that described above; the incident light couples to surface plasmons, the energy is efficiently transferred through the hole, and finally re-radiated again at the rear side in a similar way as described on the example of metallic slits. 
+The research into sub-wavelength hole arrays was revived with the advent of plasmonics, since periodic patterning of the metallic surface near a sub-wavelength hole was shown to enable the \textit{extraordinary optical transmission}\index{extraordinary transmission} (EOT) which can be orders of magnitude higher than that estimated from the hole dimensions \cite{ebbesen1998extraordinary}. The mechanism of EOT is similar to that described above; the incident light couples to surface plasmons, the energy is efficiently transferred through the hole, and finally re-radiated again at the rear side in a similar way as described on the example of metallic slits. 
 %  % predicted by Bethe's law of inverse fourth power of 
 
 Periodical arrangement of the holes is equivalent to structuring of the surroundings of a single hole. In line with the already demonstrated resonance in a metallic sheet with infinite slits, the metallic sheet with holes exhibits a resonance slightly below the diffraction edge which leads to a great drop in reflection. The exact behaviour of the structure is determined by the  metal thickness, dimensions of the holes, their spacing in the $x$-$y$ plane and the spacing of the metallic sheets along the $z$-axis.
